violating_resources/anthos-service-mesh/peer-authentication/strict-mtls/pci-dss-3.2.1/4.1_pci-asm-peer-authn-strict-mtls.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: AsmPeerAuthnStrictMtls
metadata:
  name: pci-asm-peer-authn-strict-mtls
  annotations:
    description: "Enforce all PeerAuthentications cannot overwrite strict mtls."
    bundles.validator.forsetisecurity.org/pci-dss-v3.2.1: 4.1.0
    policy.library/doc-gen: "do_not_document"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: ["security.istio.io"]
        kinds: ["PeerAuthentication"]
  parameters:
    strictnessLevel: "High"
