violating_resources/anthos-service-mesh/peer-authentication/strict-mtls/samples/example_disallowed_mtls_mode_not_matching.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: invalid-permissive-mtls-pa
  namespace: foo
spec:
  selector:
    matchLabels:
      app: bar
  mtls:
    mode: PERMISSIVE
  portLevelMtls:
    "80":
      mode: UNSET
    "443":
      mode: STRICT
