violating_resources/anthos-service-mesh/peer-authentication/strict-mtls/samples/example_disallowed_port_mode_not_matching.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: invalid-port-disable-mtls-pa
  namespace: foo
spec:
  selector:
    matchLabels:
      app: bar
  mtls:
    mode: UNSET
  portLevelMtls:
    "80":
      mode: DISABLE
    "443":
      mode: STRICT
