violating_resources/anthos-service-mesh/peer-authentication/strict-mtls/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: asm-peer-authn-strict-mtls
tests:
  - name: asm-peer-authn-strict-mtls
    template: template.yaml
    constraint: samples/constraint.yaml
    cases:
      - name: bad-strict-mtls-mode-match
        object: samples/example_disallowed_mtls_mode_not_matching.yaml
        assertions:
          - violations: yes
      - name: bad-strict-port-mode-match
        object: samples/example_disallowed_port_mode_not_matching.yaml
        assertions:
          - violations: yes
      - name: valid-strict-mtls
        object: samples/example_allowed.yaml
        assertions:
          - violations: no
  - name: pci-asm-peer-authn-strict-mtls
    template: template.yaml
    constraint: pci-dss-3.2.1/4.1_pci-asm-peer-authn-strict-mtls.yaml
    cases:
      - name: bad-strict-mtls-mode-match
        object: samples/example_disallowed_mtls_mode_not_matching.yaml
        assertions:
          - violations: yes
      - name: bad-strict-port-mode-match
        object: samples/example_disallowed_port_mode_not_matching.yaml
        assertions:
          - violations: yes
      - name: valid-strict-mtls
        object: samples/example_allowed.yaml
        assertions:
          - violations: no
